changed the math operation name

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="container">
     <h1>Calculator Menu</h1>
     <body>
-        <button id="redirectButton1">Sum</button>
+        <button id="redirectButton1">Addition</button>
         <br>
         <button id="redirectButton2">Subtraction</button>
         <br>
